# Doodle.AI

./: README.md  package-lock.json  pyproject.toml
Backend/: alembic.ini  main.py  pyproject.toml
Backend/Models/: room.py  user.py
Backend/Routers/: User_Router.py
Backend/Schemas/: User_Schema.py  room_schema.py
Backend/alembic/: env.py
Backend/alembic/versions/: 4f97cd98ded4_cleandb.py  86e376fd518d_cleandb.py  eafe2d57ae9c_cleandb.py  ec5fc7655bf4_cleandb.py
Backend/core/: database.py  websocket.py
Backend/forms/: roomForm.py  userForm.py
Backend/routers/: game.py  room.py  room_url.py  room_websocket.py  user.py
Backend/schemas/: room_schema.py  user_schema.py
Backend/utils/: populate.py
Backend/utils/populatedata/: __init__.py  user.py
Frontend/: package-lock.json  package.json
Frontend/public/: index.html
Frontend/src/: App.css  App.js  Routes.jsx  index.js
Frontend/src/Components/: Canvas.css  Canvas.jsx  CanvasHooks.jsx  ChatBar.css  ChatBar.jsx  CustomButton.css  CustomButton.jsx  DrawingTurn.css  DrawingTurn.jsx  GameBar.css  GameBar.jsx  Image.css  Image.jsx  LandingPageContainer.css  LandingPageContainer.jsx  MemberBar.css  MemberBar.jsx  ResultBox.css  ResultBox.jsx  StatusBar.css  StatusBar.jsx  WaitArea.css  WaitArea.jsx  WaitDraw.css  WaitDraw.jsx  demo.jsx  dummymembers.jsx  dummymessages.jsx  dummyresults.jsx  onedrawfinish.jsx
Frontend/src/Pages/: DrawFinish.css  GameLandingPage.jsx  GamePage.css  GamePage.jsx  Joining.css  Joining.jsx  LandingPage.css  LandingPage.jsx  ObjecttoDraw.jsx  finalpage.css  finalpage.jsx
Frontend/src/assets/: 1.jfif
Frontend/src/utils/: configs.jsx  useGame.jsx  useSocket.jsx
