[tool.poetry]
name = "doodle.ai"
version = "0.1.0"
description = ""
authors = ["zeph111 <luniva121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
