[tool.poetry]
name = "doodle.ai"
version = "0.1.0"
description = ""
authors = ["zeph111 <luniva121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
itsdangerous = "^2.1.2"
alembic = "^1.10.3"
psycopg2 = "^2.9.6"
click = "^8.1.3"
sqlalchemy = "1.4.39"
numpy = "^1.24.2"
python-multipart = "^0.0.6"
websockets = "^11.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
